--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -45,7 +45,7 @@
     <p>{{ t('They said they dispute your claim.') }}</p>
     {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
     <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before 4pm on {{ deadline }}.',
-        { deadline: claim.responseDeadline | date }) }}</p>
+        { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
     <p>{{ _downloadResponseLink(claim, 'Download their response') }}</p>
   </div>
 {% endmacro %}
@@ -60,7 +60,7 @@
     <p>{{ t('You’ve rejected the claim and said you don’t want to use mediation to solve it. You’ll have to go to a hearing.') }}</p>
     {{ _linkToDirectionsQuestionnairePage(claim.externalId) }}
     <p>{{ t('Your defence will be cancelled if you don’t complete and return the form before 4pm on {{ deadline }}.',
-        { deadline: claim.responseDeadline | date }) }}</p>
+        { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
     <p>{{ _downloadResponseLink(claim, 'Download your response') }}</p>
   </div>
 {% endmacro %}
