--- a/src/main/features/ccj/views/repayment-plan-summary.njk
+++ b/src/main/features/ccj/views/repayment-plan-summary.njk
@@ -4,9 +4,14 @@
 {% from "paymentPlanTable.njk" import paymentPlanTable %}
 
 {% if requestedBy === MadeBy.DEFENDANT.value %}
-  {% set heading = 'The claimant’s repayment plan' %}
-  {% set topMessage = 'They’ve suggested this repayment plan based on the financial details you gave:' %}
-  {% set bottomMessage = 'If you think you can’t afford the repayment plan, you can ' %}
+  {% if claim.status === ClaimStatus.CLAIMANT_ACCEPTED_COURT_PLAN_SETTLEMENT %}
+    {% set heading = 'The court’s repayment plan' %}
+    {% set topMessage = 'The court has suggested this repayment plan based on the financial details you gave:' %}
+  {% else %}
+    {% set heading = 'The claimant’s repayment plan' %}
+    {% set topMessage = 'They’ve suggested this repayment plan based on the financial details you gave:' %}
+    {% set bottomMessage = 'If you think you can’t afford the repayment plan, you can ' %}
+  {% endif %}
 {% else %}
   {% set heading = 'The repayment plan' %}
   {% set bottomMessage = 'If you think the defendant can repay you sooner, you can ' %}
@@ -30,6 +35,13 @@
       <p>{{ t('The defendant will pay {{ amount }} by {{ paymentDate }}.', { amount: remainingAmountToPay | numeral, paymentDate: paymentIntention.paymentDate | date }) }}<p>
     {% endif %}
 
+    {% if claim.status === ClaimStatus.CLAIMANT_ACCEPTED_COURT_PLAN_SETTLEMENT %}
+      <p>{{ t('The claimant has agreed to the court’s plan and signed a settlement agreement based on the plan. You can choose to sign the agreement or not.') }}</p>
+      <div class="form-group">
+        {{ internalLink('Respond to the settlement agreement ', OfferPaths.declarationPage.evaluateUri({ externalId: claim.externalId }), 'button primary-button') }}
+      </div>
+      <p>{{ t('If you do not respond, the claimant can request a County Court Judgment against you.') }}</p>
+    {% endif %}
     {% if claim.isEligibleForReDetermination() %}
       <p>{{ t(bottomMessage) }}{{ internalLink('ask a judge to make a new repayment plan.', CCJPaths.redeterminationPage.evaluateUri({ externalId: claim.externalId, madeBy: requestedBy })) }}</p>
     {% endif %}
