--- a/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/partAdmitRejectionClaimant.njk
@@ -17,7 +17,8 @@
     {% else %}
       <p>{{ t('You need to ' + internalLink('complete a directions questionnaire form ',
           DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId })) + 'to tell us more about the claim.') | safe }}</p>
-      <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ responseDeadline }}.', { responseDeadline: claim.claimantRespondedAt | addDays(19) | date }) }}</p>
+      <p>{{ t('Your claim won’t proceed if you don’t complete and return the form before {{ deadline }}.',
+          { deadline: claim.directionsQuestionnaireDeadline | date }) }}</p>
     {% endif %}
 
     <p>{{ downloadResponseLink(claim) }}</p>
