--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -10,25 +10,18 @@
       <form novalidate method="post">
         {{ csrfProtection(csrf) }}
 
+        <p> {{ t('The court has accepted your repayment plan.') }} </p>
         {% if isCourtOrderPaymentPlanConvertedByDefendantFrequency %}
-          <p> {{ t('The court has accepted your repayment amount, but the frequency will be set by the defendant.
-          We’ve converted the {{ claimantAmount }} payment {{ claimantFrequency }} to
-          {{ courtOrderAmount }} {{ courtOrderFrequency }}.', {
-              claimantAmount: claimantPaymentPlan.instalmentAmount | numeral,
-              claimantFrequency: claimantPaymentPlan.frequency | renderFrequencyViewType | lower,
-              courtOrderAmount: courtOrderPaymentPlan.instalmentAmount | numeral,
-              courtOrderFrequency: courtOrderPaymentPlan.paymentSchedule | renderPaymentSchedule | lower
-            }) }}</p>
-
+          <p> {{ t('The defendant asked to pay in {{ courtOrderFrequency }} instalments and the court accepted this.
+              The revised repayment plan is below.', {
+              courtOrderFrequency: courtOrderPaymentPlan.paymentSchedule | renderPaymentSchedule(adverbial=true) | lower
+            }) }} </p>
           {{
           repaymentPlanBlock(
             heading = '',
             repaymentPlan = courtOrderPaymentPlan
           )
           }}
-
-        {% else %}
-          <p> {{ t('The court has accepted your repayment plan.') }} </p>
         {% endif %}
         {{ submitButton() }}
       </form>
