--- a/src/main/features/response/views/confirmation.njk
+++ b/src/main/features/response/views/confirmation.njk
@@ -1,6 +1,7 @@
 {% extends "layout.njk" %}
 {% from "support.njk" import supportWidget %}
 {% from "externalLink.njk" import externalLink %}
+{% from "internalLink.njk" import internalLink %}
 
 {% set headingVisible = false %}
 {% set heading = 'Confirmation' %}
@@ -22,27 +23,34 @@
         </p>
       </div>
 
-
       {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
         {% include "./confirmation/full-admission.njk" %}
-      {% endif %}
-      {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
+      {% elseif claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
         {% include "./confirmation/full-defence.njk" %}
-      {% endif %}
-      {% if claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+      {% elseif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
         {% include "./confirmation/part-admission.njk" %}
+      {% endif %}
+
+      {% if claim.claimData.defendant.isBusiness and
+        (claim.response.responseType === domain.ResponseType.PART_ADMISSION
+        or claim.response.responseType === domain.ResponseType.FULL_ADMISSION) %}
+        <h2 class="heading-medium">{{ t('Send your financial details') }}</h2>
+        <p>{{ t('Send {{ claimantName }} your company or organisation’s most recent statement of accounts, if you haven’t already.',
+            { claimantName: claim.claimData.claimant.name }) }}</p>
+
+        <p>{{ internalLink(
+            t('Get {{ claimantName }}’s contact details', { claimantName: claim.claimData.claimant.name }),
+            DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.claimData.externalId })
+          ) }}.</p>
       {% endif %}
 
       <h2 class="heading-medium">{{ t('What happens next') }}</h2>
 
       {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
         {% include "./confirmation/full-admission-steps.njk" %}
-      {% endif %}
-      {% if claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
+      {% elseif claim.response.responseType === domain.ResponseType.FULL_DEFENCE %}
         {% include "./confirmation/full-defence-steps.njk" %}
-      {% endif %}
-
-      {% if claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
+      {% elseif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
         {% include "./confirmation/part-admission-steps.njk" %}
       {% endif %}
 
