--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -25,7 +25,7 @@
           }}
         {% endif %}
 
-        {% if claim.claimData.defendant.type === 'company' %}
+        {% if claim.claimData.defendant.isBusiness() %}
           {% set hint = 'The defendant should have sent you their financial details. You’ll need to send them to us. We’ll use them to check if they can afford your plan' %}
         {% endif %}
 
