--- a/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/admissionByCCJDefendant.njk
@@ -1,7 +1,7 @@
 {% from "internalLink.njk" import internalLink %}
 {% from "externalLink.njk" import externalLink %}
 {% from "form.njk" import linkButton %}
-{% from "./utilityMacros.njk" import downloadResponseLink %}
+{% from "./utilityMacros.njk" import downloadResponseLink, admissionByCCJCommonInfoClaimDetails %}
 
 {% macro admissionByCCJDefendantDashboard(claim) %}
   {{ t('{{ claimantName }} requested a County Court Judgment against you', { claimantName: claim.claimData.claimant.name }) }}
@@ -16,47 +16,6 @@
     {{ admissionByCCJCommonInfoClaimDetails(claim) }}
   </div>
 {% endmacro %}
-
-{% macro admissionByCCJAfterPayImmediatelyDeadlineClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-    {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-      <p>{{ t('You agreed to pay the full {{ amount }} immediately.', { amount: claim.response.amount }) }}</p>
-    {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-      <p>{{ t('{{ claimantName }} accepted your offer to pay {{ partAdmitAmount }} immediately.',
-          { claimantName: claim.claimData.claimant.name, partAdmitAmount: claim.response.amount }) }}</p>
-    {% endif %}
-    <p>{{ t('Because you didn’t pay within 5 days, they requested a CCJ against you.') }}</p>
-
-    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
-  </div>
-{% endmacro %}
-
-{% macro CCJAfterBreakingSettlementAgreementClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-    <p>{{ t('Because you didn’t pay on time or didn’t pay the correct amount, they requested a CCJ against you.') }}</p>
-    <p>{{ internalLink('View the repayment plan', CCJPaths.repaymentPlanSummaryPage.evaluateUri({ externalId: claim.externalId, madeBy: MadeBy.DEFENDANT.value })) }}</p>
-
-    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
-  </div>
-{% endmacro %}
-
-{% macro CCJAfterDefendantDidNotSignSettlementAgreementClaimDetails(claim) %}
-  <div class="status-block">
-    <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
-    {% if claim.response.responseType === domain.ResponseType.FULL_ADMISSION %}
-      {% elif claim.response.responseType === domain.ResponseType.PART_ADMISSION %}
-    {% endif %}
-
-    <p>{{ t('{{ claimantName }} accepted your repayment plan.', { claimantName: claim.claimData.claimant.name }) }}</p>
-    <p>{{ t('They asked you to sign a settlement agreement. Because you didn’t sign it, they requested a CCJ against you.') }}</p>
-    <p>{{ internalLink('View the repayment plan', CCJPaths.repaymentPlanSummaryPage.evaluateUri({ externalId: claim.externalId, madeBy: MadeBy.DEFENDANT.value })) }}</p>
-
-    {{ admissionByCCJCommonInfoClaimDetails(claim) }}
-  </div>
-{% endmacro %}
-
 
 {% macro CCJByDeterminationDefendantClaimDetails(claim) %}
   <div class="status-block">
@@ -79,12 +38,3 @@
   </div>
 {% endmacro %}
 
-{% macro admissionByCCJCommonInfoClaimDetails(claim) %}
-  <p>{{ t('When we’ve processed the request we’ll post a copy of the judgment to you and to {{ claimantName }}.', { claimantName: claim.claimData.claimant.name }) }}</p>
-  <p>{{ t('If you pay the debt within one month of the date of judgment, the CCJ is removed from the public register. You can pay £15 to ' +
-      externalLink('apply for a certificate', 'https://www.gov.uk/government/publications/form-n443-application-for-a-certificate-of-satisfaction-or-cancellation') +
-      ' that confirms this.') | safe }}</p>
-  <p>{{ t(internalLink('Contact ' + claim.claimData.claimant.name, DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) +
-      ' if you need their payment details. Make sure you get receipts for any payments.') | safe }}</p>
-  <p>{{ downloadResponseLink(claim) }}</p>
-{% endmacro %}
