--- a/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/utilityMacros.njk
@@ -20,3 +20,13 @@
   <a href="{{ OfferPaths.agreementReceiver.evaluateUri({ externalId: claim.externalId }) }}">
     {{ t('Download the settlement agreement') }}</a> {{ t(' (PDF)') }}
 {% endmacro %}
+
+{% macro admissionByCCJCommonInfoClaimDetails(claim) %}
+  <p>{{ t('When we’ve processed the request we’ll post a copy of the judgment to you and to {{ claimantName }}.', { claimantName: claim.claimData.claimant.name }) }}</p>
+  <p>{{ t('If you pay the debt within one month of the date of judgment, the CCJ is removed from the public register. You can pay £15 to ' +
+      externalLink('apply for a certificate', 'https://www.gov.uk/government/publications/form-n443-application-for-a-certificate-of-satisfaction-or-cancellation') +
+      ' that confirms this.') | safe }}</p>
+  <p>{{ t(internalLink('Contact ' + claim.claimData.claimant.name, DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) +
+      ' if you need their payment details. Make sure you get receipts for any payments.') | safe }}</p>
+  <p>{{ downloadResponseLink(claim) }}</p>
+{% endmacro %}
