Use correct apostrophe

--- a/src/main/features/claimant-response/views/confirmation/accepted-payment-plan.njk
+++ b/src/main/features/claimant-response/views/confirmation/accepted-payment-plan.njk
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-{{ t('If they don‘t sign the agreement or reject it, you can request a CCJ against them which orders them to pay in line with the terms of the repayment plan.') }}
+{{ t('If they don’t sign the agreement or reject it, you can request a CCJ against them which orders them to pay in line with the terms of the repayment plan.') }}
 </p>
 
 <h2 class="heading-medium">{{ t('If you don’t get paid') }}</h2>
