--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementDefendant.njk
@@ -73,10 +73,10 @@
 {% macro settlementAgreementRejectedDefendantClaimDetails(claim) %}
   <div class="status-block">
     <h2 class="heading-small">{{ t('You rejected the settlement agreement') }}</h2>
-    <p>{{ t('The claimant can request a County Court Judgment (CCJ) against you.') }}</p>
+    <p>{{ t('{{ claimantName }} can request a County Court Judgment (CCJ) against you.', { claimantName: claim.claimData.claimant.name }) }}</p>
     <p>{{ t('A CCJ would order you to repay the money in line with the terms of the agreement.') }}</p>
-    <p>{{ t('If they request a CCJ, you can ask a judge to consider changing the repayment plan, based on your financial details.') }}</p>
-    <p>{{ t('The court has reviewed the plan and believes you can afford it, so a judge may not change it.') }}</p>
+    <p>{{ t('The court has reviewed the repayment plan and believes you can afford it.') }}</p>
+    <p>{{ t('If {{ claimantName }} requests a CCJ, you can ask a judge to consider changing the plan, based on your financial details.', { claimantName: claim.claimData.claimant.name}) }}</p>
     <p>{{ t('We’ll email you when {{ defendantName }} responds', { defendantName: claim.claimData.claimant.name } )}}</p>
     <p>{{ downloadResponseLink(claim) }}</p>
   </div>
