--- a/src/main/features/response/views/evidence.njk
+++ b/src/main/features/response/views/evidence.njk
@@ -12,29 +12,30 @@
 {% block content %}
 <div class="grid-row">
   <div class="column-two-thirds">
-
-    {% if evidence.rows.length > 0 %}
-      <div class="description-block">
-        <h3 class="heading-small">Their evidence</h3>
-        <div class="form-fields">
-          <table>
-            <thead>
-              <tr>
-                <th scope="col">{{ t('Type') }}</th>
-                <th scope="col">{{ t('Description') }}</th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for item in evidence.rows %}
-              <tr>
-                <td>{{ item.type.displayValue }}</td>
-                <td>{{ item.description | default('')}}</td>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>
+    {% if evidence.rows %}
+      {% if evidence.rows.length > 0 %}
+        <div class="description-block">
+          <h3 class="heading-small">Their evidence</h3>
+          <div class="form-fields">
+            <table>
+              <thead>
+                <tr>
+                  <th scope="col">{{ t('Type') }}</th>
+                  <th scope="col">{{ t('Description') }}</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for item in evidence.rows %}
+                <tr>
+                  <td>{{ item.type.displayValue }}</td>
+                  <td>{{ item.description | default('')}}</td>
+                </tr>
+              {% endfor %}
+              </tbody>
+            </table>
+          </div>
         </div>
-      </div>
+      {% endif %}
     {% endif %}
 
     <form method="post" novalidate>
