content update and corrected tests accordingly

--- a/src/main/features/claimant-response/views/court-offered-instalments.njk
+++ b/src/main/features/claimant-response/views/court-offered-instalments.njk
@@ -4,7 +4,7 @@
 {% from "./macro/repaymentPlanBlock.njk" import repaymentPlanBlock %}
 {% from "financialDetails.njk" import financialDetailsTable %}
 
-{% set heading = 'Your instalments are more than the defendant can afford' %}
+{% set heading = 'The defendant can’t afford your plan' %}
 
 {% block content %}
   <div class="grid-row">
