--- a/src/main/features/ccj/views/confirmation-ccj.njk
+++ b/src/main/features/ccj/views/confirmation-ccj.njk
@@ -1,6 +1,7 @@
 {% extends "layout.njk" %}
 {% from "form.njk" import submitButton, errorSummary %}
 {% from "support.njk" import supportWidget %}
+{% from "internalLink.njk" import internalLink %}
 
 {% set headingVisible = false %}
 {% set heading = 'Confirmation' %}
@@ -23,9 +24,9 @@
 
       {% include "includes/service_survey_link.njk" %}
 
-      <p><a class="button" href="{{ DashboardPaths.dashboardPage.uri }}">{{ t('Go to your account') }}</a></p>
-      {{ supportWidget() }}
+      <p>{{ internalLink('Go to your account', DashboardPaths.dashboardPage.uri, 'button') }}</p>
 
+      {{ supportWidget() }}
     </div>
   </div>
 
