Mark internal links as safe

--- a/src/main/features/ccj/views/confirmation-redetermination.njk
+++ b/src/main/features/ccj/views/confirmation-redetermination.njk
@@ -37,7 +37,7 @@
 
       {% include "includes/service_survey_link.njk" %}
 
-      <p>{{ internalLink('Go to your account', DashboardPaths.dashboardPage.uri, 'button') }}</p>
+      <p>{{ internalLink('Go to your account', DashboardPaths.dashboardPage.uri, 'button') | safe }}</p>
 
       {{ supportWidget() }}
     </div>
