--- a/src/main/features/claimant-response/views/court-offered-instalments.njk
+++ b/src/main/features/claimant-response/views/court-offered-instalments.njk
@@ -31,13 +31,13 @@
           name = 'accept',
           options = [
           {
-            label: 'Yes',
+            label: 'I want to accept this repayment plan',
             value: YesNoOption.YES.option,
             checked: (form.valueFor('accept') === YesNoOption.YES),
             bold: false
           },
           {
-            label: 'No - I want a judge to determine the repayment plan',
+            label: 'I want a judge to make a repayment plan',
             value:  YesNoOption.NO.option,
             checked: (form.valueFor('accept') === YesNoOption.NO),
             bold: false
