--- a/src/main/features/dashboard/views/macro/caseStatus.njk
+++ b/src/main/features/dashboard/views/macro/caseStatus.njk
@@ -22,11 +22,14 @@
 
 {% from "./claimStatus/claimPartAdmittedDefendant.njk" import
   claimPartAdmittedAlreadyPaidForDefendantDashboard,
-  claimPartAdmittedToOweForDefendantDashboard %}
+  claimPartAdmittedToOweForDefendantDashboard,
+  partAdmittedClaimantAcceptsDefendantDashboard %}
 
 {% from "./claimStatus/claimPartAdmissionClaimant.njk" import
   claimPartAdmittedAlreadyPaidForClaimantDashboard,
-  claimPartAdmittedToOweForClaimantDashboard %}
+  claimPartAdmittedToOweForClaimantDashboard,
+  partAdmittedPayImmediatelyClaimantClaimDetails,
+  partAdmittedClaimantAcceptsClaimantDashboard %}
 
 {% from "./claimStatus/claimFullAdmissionForDefendant.njk" import
   claimFullAdmissionForDefendantDashboard %}
@@ -120,6 +123,8 @@
     {{ claimantRejectedDefendantAsCompanyOrOrganisationResponse() }}
   {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
     {{ partAdmitRejectedByClaimantDashboard(claim) }}
+  {% elif status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
+    {{ partAdmittedClaimantAcceptsClaimantDashboard(claim) }}
   {% endif %}
 {% endmacro %}
 
@@ -170,6 +175,8 @@
       {{ offerAcceptedForDefendantDashboard() }}
     {% elif status === ClaimStatus.CLAIMANT_REJECTS_PART_ADMISSION %}
       {{ partAdmitRejectedByClaimantDefendantDashboard(claim) }}
+    {% elif status === ClaimStatus.PART_ADMIT_PAY_IMMEDIATELY %}
+      {{ partAdmittedClaimantAcceptsDefendantDashboard(claim) }}
     {% elif status === ClaimStatus.OFFER_SETTLEMENT_REACHED
       or status === ClaimStatus.ELIGIBLE_FOR_CCJ_AFTER_BREACHED_SETTLEMENT %}
       {{ offerSettlementReachedDashboard() }}
