--- a/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/settlementAgreementClaimant.njk
@@ -11,11 +11,12 @@
 {% endmacro %}
 
 {% macro settlementAgreementSignedByBothClaimantDashboard(claim) %}
-  {{ t('You’ve both signed a settlement agreement') }}
+  {{ t('You’ve both signed a settlement agreement.') }}
 {% endmacro %}
 
 {% macro settlementAgreementRejectedForClaimantDashboard(claim) %}
-  {{ t('The defendant has rejected your settlement agreement. You can request a County Court Judgment against them') }}
+  {{ t('{{ defendantName }} has rejected your settlement agreement. You can request a County Court Judgment against them.',
+    { defendantName: claim.claimData.defendant.name }) }}
 {% endmacro %}
 
 {% macro settlementAgreementSignedByClaimantClaimDetails(claim) %}
